--- a/BarricadeNew.csproj
+++ b/BarricadeNew.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.1.0"/>
+        <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.1.0" />
         <PackageReference Include="Avalonia.Desktop" Version="11.1.0"/>
         <PackageReference Include="Avalonia.Svg.Skia" Version="11.1.0" />
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.0"/>
@@ -25,5 +26,9 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.0"/>
+        <PackageReference Include="Dapper" Version="2.1.35" />
+        <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
+        <PackageReference Include="SQLite" Version="3.13.0" />
     </ItemGroup>
 </Project>
