--- a/BarricadeNew.csproj
+++ b/BarricadeNew.csproj
@@ -29,5 +29,6 @@
         <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
         <PackageReference Include="SQLite" Version="3.13.0" />
+        <PackageReference Include="TextCopy" Version="6.2.1" />
     </ItemGroup>
 </Project>
